--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.11'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    //RxBus防止内存泄漏
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.2'
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
     //ButterKnife依赖
@@ -59,5 +61,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //Glide 加载图片
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    //LiveDataBus 消息总线
+//    implementation 'com.jeremyliao:live-event-bus-x:1.4.0'
 
 }
