下载时通知栏适配

--- a/app/src/main/assets/config.properties
+++ b/app/src/main/assets/config.properties
@@ -6,7 +6,8 @@
 #host_oos=zxyj-stor-1
 #-------------------------------------------------------------
 #测试环境
-host=http://101.132.177.251:8000
+#host=http://101.132.177.251:8000
+host=http://119.23.50.215:9056
 ##测试环境IM
 websocket_host=ws://119.23.50.215:7800
 ##测试环境oos
