--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.shgbit.bailiff"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         multiDexEnabled true
         versionCode 1
@@ -61,7 +61,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     //Glide 加载图片
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    //LiveDataBus 消息总线
-//    implementation 'com.jeremyliao:live-event-bus-x:1.4.0'
+    //material dialog
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
 
 }
