--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,21 +13,37 @@ android {
     defaultConfig {
         applicationId "com.shgbit.bailiff"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 26
         multiDexEnabled true
         versionCode 117
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    //支持lambda表达式
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+
     buildTypes {
         debug {
             signingConfig signingConfigs.sign
+            // 混淆
             minifyEnabled true
+            // Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
             signingConfig signingConfigs.sign
+            // 混淆
             minifyEnabled true
+            // Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -38,6 +54,11 @@ android {
 //            outputFileName = "zhzx_v" + defaultConfig.versionName + "_" + today + ".apk"
 //            outputFileName = "zhzx_ceshi.apk"
 
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
@@ -73,5 +94,10 @@ dependencies {
     //material dialog
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
+    //baidu sdk
+    implementation files('libs/BaiduLBS_Android.jar')
+    //bugly
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
+    implementation 'com.tencent.bugly:nativecrashreport:3.6.0'
 
 }
