--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,19 @@
             </intent-filter>
         </activity>
 
+        <!-- 声明service组件 -->
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote"></service>
+
+        <!-- AK鉴权 -->
+        <!-- meta-data需要写在application中 -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="XCRVZzGDNTuQEDU3Usq5ukQNpnipUi4B" />  <!-- http://lbsyun.baidu.com/apiconsole/key -->
+
+
         <activity
             android:name="com.shgbit.bailiff.mvp.login.LoginActivity"
             android:theme="@style/LoginTheme" />
@@ -43,6 +56,8 @@
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
 
         <service android:name="com.shgbit.bailiff.service.DownloadIntentService" />
+
+        <service android:name="com.shgbit.bailiff.service.MainReportService" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -62,6 +77,37 @@
     <!--读写权限-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!--安装未知来源app-->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <!--9.0启动service-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!--phone-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <!--Camera-->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <!--Audio-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!--log-->
+    <uses-permission android:name="android.permission.READ_LOGS" />
+
+    <!-- 这个权限用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <!-- 用于读取手机当前的状态-->
+    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>-->
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>-->
+    <!-- 访问网络，网络定位需要上网-->
+    <!--<uses-permission android:name="android.permission.INTERNET" />-->
+    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
 
 </manifest>
