--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'//加入
 
 android {
     signingConfigs {
@@ -15,7 +16,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 26
         multiDexEnabled true
-        versionCode 117
+        versionCode 118
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -61,6 +62,12 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
+    greendao {
+        schemaVersion 2 //数据库版本号，数据库升级使用
+        daoPackage 'com.shgbit.bailiff.db' //代表GreenDao自动生成的有关数据库操作工具类所要存放的包名
+        targetGenDir 'src/main/java' //路径
+    }
 }
 
 dependencies {
@@ -99,5 +106,7 @@ dependencies {
     //bugly
     implementation 'com.tencent.bugly:crashreport_upgrade:1.3.4'
     implementation 'com.tencent.bugly:nativecrashreport:3.6.0'
+    //greendao 数据库
+    implementation 'org.greenrobot:greendao:3.2.2'
 
 }
