--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,11 +86,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.17'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //RxBus防止内存泄漏
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-android-lifecycle:2.2.2'
+    //rxbinding
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     //gson
     implementation 'com.google.code.gson:gson:2.8.5'
     //ButterKnife依赖
@@ -108,7 +108,9 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:3.6.0'
     //greendao 数据库
     implementation 'org.greenrobot:greendao:3.2.2'
-    //greendao mmkv
+    // mmkv
     implementation 'com.tencent:mmkv:1.0.15'
+    //eventbus 消息
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
 }
